--- a/mission/one/src/components/content/index.scss
+++ b/mission/one/src/components/content/index.scss
@@ -24,11 +24,12 @@
       transition: transform 0.6s ease 0s;
 
       @include ipad {
-        width: 278px;
-        height: 312px;
-        background-size: 278px 312px;
-        position: static;
-        margin: 25px auto 0;
+        width: 293px;
+        height: 336px;
+        background-size: 293px 336px;
+        top: 200px;
+        left: 50%;
+        transform: translate3d(-50%, 0, 0);
       }
     }
 
@@ -91,7 +92,7 @@
   #c2 {
     width: 100%;
     height: 800px;
-    background: url("../../img/板块3背景色@2x.png");
+    background: url("../../img/板块3背景@2x.png");
     background-size: 100% 800px;
     overflow: hidden;
     position: relative;
@@ -181,7 +182,7 @@
   #c3 {
     width: 100%;
     height: 900px;
-    background: url("../../img/板块2背景@2x.png");
+    background: url("../../img/板块4背景@2x.png");
     background-size: 100% 900px;
     overflow: hidden;
     position: relative;
@@ -206,8 +207,9 @@
         width: 278px;
         height: 312px;
         background-size: 278px 312px;
-        position: static;
-        margin: 60px auto 0;
+        top: 295px;
+        left: 50%;
+        transform: translate3d(-50%, 0, 0);
       }
     }
 
@@ -280,6 +282,22 @@
         font-size: 12px;
         line-height: 14px;
         margin: 12px auto 0;
+      }
+    }
+
+    pre {
+      code.hljs {
+        @include ipad {
+          width: 280px;
+          height: 178px;
+          border-radius: 4px;
+          backdrop-filter: blur(4.666666666666667px);
+          margin: 20px auto 60px;
+          position: absolute;
+          top: 660px;
+          left: 50%;
+          transform: translate3d(-50%, 0, 0);
+        }
       }
     }
   }
