--- a/mission/one/src/components/navigation/index.scss
+++ b/mission/one/src/components/navigation/index.scss
@@ -3,7 +3,7 @@
   height: 100px;
   position: absolute;
   background: transparent;
-  z-index: 2;
+  z-index: 99;
 
   @include ipad {
     height: 50px;
@@ -26,19 +26,37 @@
   }
 
   .text {
+    text-align: center;
+    color: #FFF;
     position: absolute;
     left: 50%;
     top: 50%;
     transform: translate3d(-50%, -50%, 0);
 
     @include ipad {
+      width: 20px;
+      height: 50px;
+      line-height: 50px;
+      position: static;
+      float: right;
+      margin-right: 20px;
+      transform: translate3d(0, 0, 0);
+    }
+
+    #open {
       display: none;
+
+      @include ipad {
+        display: inherit;
+      }
     }
 
     ul {
-      text-align: center;
-      color: #FFF;
       overflow: hidden;
+
+      @include ipad {
+        display: none;
+      }
 
       li {
         font-size: 24px;
@@ -56,7 +74,7 @@
     width: 192px;
     height: 40px;
     margin: 30px 100px 0 0;
-    line-height: 40px;
+    line-height: 38px;
     background: rgba(255, 255, 255, 0.2);
     border-radius: 20px;
     border: 1px solid rgba(255, 255, 255, 0.8);
