--- a/mission/one/src/components/content/index.scss
+++ b/mission/one/src/components/content/index.scss
@@ -7,8 +7,9 @@
     overflow: hidden;
     position: relative;
 
-    @include ipad {
+    @include mobile {
       height: 580px;
+      background: url("../../img/板块2背景-m@2x.png");
       background-size: 100% 580px;
     }
 
@@ -20,10 +21,13 @@
       position: absolute;
       top: 16px;
       left: 78px;
-      transform-origin: left center;
-      transition: transform 0.6s ease 0s;
 
-      @include ipad {
+      @include pc {
+        transform-origin: left center;
+        transition: transform 0.6s ease 0s;
+      }
+
+      @include mobile {
         width: 293px;
         height: 336px;
         background-size: 293px 336px;
@@ -34,7 +38,9 @@
     }
 
     &:hover .img {
-      transform: scale(1.05);
+      @include pc {
+        transform: scale(1.05);
+      }
     }
 
     .p1 {
@@ -45,7 +51,7 @@
       color: #FFF;
       line-height: 54px;
 
-      @include ipad {
+      @include mobile {
         width: 280px;
         height: 24px;
         font-size: 24px;
@@ -62,7 +68,7 @@
       color: rgba(255, 255, 255, 0.8);
       line-height: 32px;
 
-      @include ipad {
+      @include mobile {
         width: 280px;
         height: 42px;
         font-size: 12px;
@@ -79,7 +85,7 @@
       color: #FFF;
       line-height: 32px;
 
-      @include ipad {
+      @include mobile {
         width: 280px;
         height: 28px;
         font-size: 12px;
@@ -97,8 +103,9 @@
     overflow: hidden;
     position: relative;
 
-    @include ipad {
+    @include mobile {
       height: 440px;
+      background: url("../../img/板块3背景-m@2x.png");
       background-size: 100% 440px;
     }
 
@@ -110,10 +117,13 @@
       position: absolute;
       top: 216px;
       right: 107px;
-      transform-origin: right bottom;
-      transition: transform 0.6s ease 0s;
 
-      @include ipad {
+      @include pc {
+        transform-origin: right bottom;
+        transition: transform 0.6s ease 0s;
+      }
+
+      @include mobile {
         width: 280px;
         height: 151px;
         background-size: 280px 151px;
@@ -124,7 +134,9 @@
     }
 
     &:hover .img {
-      transform: scale(1.05);
+      @include pc {
+        transform: scale(1.05);
+      }
     }
 
     .p1 {
@@ -135,7 +147,7 @@
       color: #101313;
       line-height: 59px;
 
-      @include ipad {
+      @include mobile {
         width: 280px;
         height: 24px;
         font-size: 24px;
@@ -152,7 +164,7 @@
       color: #101313;
       line-height: 32px;
 
-      @include ipad {
+      @include mobile {
         width: 280px;
         height: 20px;
         font-size: 16px;
@@ -169,7 +181,7 @@
       color: #101313;
       line-height: 32px;
 
-      @include ipad {
+      @include mobile {
         width: 280px;
         height: 28px;
         font-size: 12px;
@@ -182,13 +194,18 @@
   #c3 {
     width: 100%;
     height: 900px;
-    background: url("../../img/板块4背景@2x.png");
+    //background: url("../../img/板块4背景@2x.png");
     background-size: 100% 900px;
     overflow: hidden;
     position: relative;
 
-    @include ipad {
+    &.visible {
+      background: url("../../img/板块4背景@2x.png");
+    }
+
+    @include mobile {
       height: 898px;
+      background: url("../../img/板块4背景-m@2x.png");
       background-size: 100% 898px;
     }
 
@@ -200,10 +217,13 @@
       position: absolute;
       top: 124px;
       left: 82px;
-      transform-origin: left center;
-      transition: transform 0.6s ease 0s;
 
-      @include ipad {
+      @include pc {
+        transform-origin: left center;
+        transition: transform 0.6s ease 0s;
+      }
+
+      @include mobile {
         width: 278px;
         height: 312px;
         background-size: 278px 312px;
@@ -214,7 +234,9 @@
     }
 
     &:hover .img {
-      transform: scale(1.05);
+      @include pc {
+        transform: scale(1.05);
+      }
     }
 
     .p1 {
@@ -225,7 +247,7 @@
       color: #FFFFFF;
       line-height: 59px;
 
-      @include ipad {
+      @include mobile {
         width: 280px;
         height: 24px;
         font-size: 24px;
@@ -242,7 +264,7 @@
       color: #FFFFFF;
       line-height: 40px;
 
-      @include ipad {
+      @include mobile {
         width: 280px;
         height: 40px;
         font-size: 16px;
@@ -259,7 +281,7 @@
       color: rgba(255, 255, 255, 0.8);
       line-height: 32px;
 
-      @include ipad {
+      @include mobile {
         width: 280px;
         height: 42px;
         font-size: 12px;
@@ -276,7 +298,7 @@
       color: rgba(255, 255, 255, 0.8);
       line-height: 32px;
 
-      @include ipad {
+      @include mobile {
         width: 280px;
         height: 42px;
         font-size: 12px;
@@ -287,7 +309,7 @@
 
     pre {
       code.hljs {
-        @include ipad {
+        @include mobile {
           width: 280px;
           height: 178px;
           border-radius: 4px;
@@ -297,6 +319,7 @@
           top: 660px;
           left: 50%;
           transform: translate3d(-50%, 0, 0);
+          font-size: 12px;
         }
       }
     }
@@ -308,7 +331,7 @@
     background: linear-gradient(96deg, #F4F5FF 0%, #FFF8F2 100%);
     overflow: hidden;
 
-    @include ipad {
+    @include mobile {
       height: 180px;
     }
 
@@ -323,7 +346,7 @@
       transform-origin: bottom center;
       transition: transform 0.6s ease 0s;
 
-      @include ipad {
+      @include mobile {
         width: 280px;
         height: 48px;
         font-size: 20px;
@@ -344,10 +367,13 @@
       color: rgba(16, 19, 19, 0.8);
       line-height: 24px;
       text-align: center;
-      transform-origin: center bottom;
-      transition: transform 0.6s ease 0s;
 
-      @include ipad {
+      @include pc {
+        transform-origin: center bottom;
+        transition: transform 0.6s ease 0s;
+      }
+
+      @include mobile {
         width: 209px;
         height: 12px;
         font-size: 12px;
@@ -357,7 +383,9 @@
     }
 
     &:hover .p2 {
-      transform: scale(1.05);
+      @include pc {
+        transform: scale(1.05);
+      }
     }
 
     .request-info-btn {
@@ -370,12 +398,12 @@
       backdrop-filter: blur(2px);
       margin: 60px auto;
 
-      @include ipad {
+      @include mobile {
         width: 140px;
         height: 32px;
         border-radius: 16px;
         font-size: 14px;
-        margin: 8px auto 0;
+        margin: 16px auto 0;
       }
     }
   }
