--- a/mission/one/src/components/footer/index.scss
+++ b/mission/one/src/components/footer/index.scss
@@ -4,7 +4,7 @@
   background: #101313;
   overflow: hidden;
 
-  @include ipad {
+  @include mobile {
     height: 288px;
   }
 
@@ -16,7 +16,7 @@
     float: left;
     margin: 60px 391px 0 100px;
 
-    @include ipad {
+    @include mobile {
       width: 146.5px;
       height: 24px;
       background-size: 146.5px 24px;
@@ -29,7 +29,7 @@
     margin-top: 72px;
     float: left;
 
-    @include ipad {
+    @include mobile {
       margin-top: 0;
       float: unset;
     }
@@ -43,12 +43,13 @@
         line-height: 26px;
         float: left;
 
-        @include ipad {
+        @include mobile {
           width: 100%;
           height: 40px;
           line-height: 40px;
           padding-left: 20px;
           float: unset;
+          font-size: 12px;
         }
 
         &:not(:last-child) {
@@ -66,11 +67,12 @@
     line-height: 22px;
     float: left;
 
-    @include ipad {
+    @include mobile {
       width: 280px;
       margin: 12px 0 0 20px;
       line-height: 12px;
       float: unset;
+      font-size: 12px;
     }
   }
 
@@ -82,11 +84,12 @@
     line-height: 18px;
     float: left;
 
-    @include ipad {
+    @include mobile {
       width: 280px;
       margin: 12px 0 0 20px;
       line-height: 12px;
       float: unset;
+      font-size: 12px;
     }
   }
 
@@ -98,11 +101,12 @@
     line-height: 18px;
     float: left;
 
-    @include ipad {
+    @include mobile {
       width: 280px;
       margin: 12px 0 0 20px;
       line-height: 12px;
       float: unset;
+      font-size: 12px;
     }
   }
 }
