--- a/mission/one/src/components/navigation/index.scss
+++ b/mission/one/src/components/navigation/index.scss
@@ -5,22 +5,19 @@
   background: transparent;
   z-index: 99;
 
-  @include ipad {
+  @include mobile {
     height: 50px;
   }
 
   .logo {
     width: 293px;
     height: 48px;
-    background: url('../../img/logo@2x.png');
-    background-size: 293px 48px;
     float: left;
     margin: 30px 0 0 100px;
 
-    @include ipad {
+    @include mobile {
       width: 146.5px;
       height: 24px;
-      background-size: 146.5px 24px;
       margin: 12px 0 0 20px;
     }
   }
@@ -33,7 +30,7 @@
     top: 50%;
     transform: translate3d(-50%, -50%, 0);
 
-    @include ipad {
+    @include mobile {
       width: 20px;
       height: 50px;
       line-height: 50px;
@@ -46,7 +43,7 @@
     #open {
       display: none;
 
-      @include ipad {
+      @include mobile {
         display: inherit;
       }
     }
@@ -54,7 +51,7 @@
     ul {
       overflow: hidden;
 
-      @include ipad {
+      @include mobile {
         display: none;
       }
 
@@ -84,7 +81,7 @@
     text-align: center;
     float: right;
 
-    @include ipad {
+    @include mobile {
       display: none;
     }
   }
