完成商品车部门-订单管理

--- a/mission/LogisticsManage/src/styles/add.scss
+++ b/mission/LogisticsManage/src/styles/add.scss
@@ -2,3 +2,8 @@
   height: 20px !important;
   line-height: 20px !important;
 }
+
+.el-table__row a:hover {
+  color: #0000ee;
+  text-decoration: underline;
+}
